# delicar

./: .pgm  .yaml  README.md  backend_test_104.js  convert.py  frontendbackup.html  index.html  lego_loam_map_flat.pcd  map.pcd  package-lock.json  package.json  readme.txt
FAST_LIO/Log/: mat_pre.txt
FAST_LIO/config/: velodyne.yaml
FAST_LIO/launch/: fast_lio.launch.py  mapping.launch.py
FAST_LIO/src/: laserMapping.cpp
LIO-SAM/: CMakeLists.txt
LIO-SAM/config/: params.yaml
LIO-SAM/src/: mapOptmization.cpp
delicar_bringup/: CMakeLists.txt  delicar_bringup.xml  delicar_controller.xml  package.xml
delicar_bringup/bringup/config/: delicar_controllers.yaml  gazebo_controllers.yaml
delicar_bringup/bringup/launch/: delicar.launch.py  gazebo.launch.py
delicar_bringup/config/: delicar_controllers.yaml  ekf.yaml  gazebo_controllers.yaml  twist_mux.yaml
delicar_bringup/description/launch/: view_robot.launch.py
delicar_bringup/description/ros2_control/: delicar_controllers.xacro  gazebo_controllers.xacro
delicar_bringup/description/rviz/: delicar.rviz
delicar_bringup/description/urdf/: camera.urdf.xacro  color.materials.xacro  delicar.urdf.xacro  delicar_description.urdf.xacro  imu.urdf.xacro  lidar.urdf.xacro  velodyne_lidar.urdf.xacro
delicar_bringup/description/worlds/: test.world  test_world.model
delicar_bringup/hardware/: carlikebot_system.cpp  delicar_system.cpp  modbus_test  modbus_test.cpp
delicar_bringup/hardware/include/delicar_bringup/: actuator.hpp  carlikebot_system.hpp  delicar_comms.hpp  delicar_system.hpp
delicar_bringup/launch/: delicar_bringup.launch.py
delicar_control/delicar_manual_control/: package.xml  setup.py
delicar_control/delicar_manual_control/config/: joy_controller.yaml
delicar_control/delicar_manual_control/delicar_manual_control/: joystick_watchdog.py
delicar_control/delicar_manual_control/launch/: joy_controller.launch.py
delicar_control/twist_converter/launch/: twist_converter.launch.py
delicar_control/twist_mux/: package.xml
delicar_control/twist_mux/config/: twist_mux_topics.yaml
delicar_control/twist_mux/launch/: twist_mux.launch.py
delicar_control/twist_mux/src/: twist_marker.cpp
delicar_description/: CMakeLists.txt  package.xml
delicar_description/launch/: description.launch.py
delicar_description/urdf/: delicar.urdf.xacro  delicar_sim.urdf.xacro
delicar_description/urdf/controllers/: delicar_controllers.xacro  gazebo_controllers.xacro
delicar_description/urdf/robot/: delicar_description.urdf.xacro
delicar_description/urdf/sensors/: camera.urdf.xacro  depth_camera.urdf.xacro  imu.urdf.xacro  laser.urdf.xacro  laser_3d.urdf.xacro  lidar_3d.urdf.xacro  rslidar.urdf.xacro
delicar_gazebo/: CMakeLists.txt  package.xml
delicar_gazebo/env-hooks/: delicar_gazebo.sh.in
delicar_gazebo/launch/: gazebo.launch.py
delicar_gazebo/worlds/: playground.world
delicar_keyboard_control/: package.xml  setup.cfg  setup.py
delicar_localization/FAST_LIO/Log/: mat_pre.txt
delicar_localization/FAST_LIO/rviz/: fastlio.rviz
delicar_localization/FAST_LIO/src/: laserMapping.cpp
delicar_localization/lidar_localization_ros2/: CMakeLists.txt  package.xml
delicar_localization/lidar_localization_ros2/launch/: lidar_localization.launch.py
delicar_localization/lidar_localization_ros2/param/: localization.yaml
delicar_localization/lidar_localization_ros2/rviz/: localization.rviz
delicar_localization/ndt_omp/: CMakeLists.txt  package.xml
delicar_manual_control/: setup.cfg  setup.py
delicar_manual_control/config/: joy_controller.yaml
delicar_manual_control/delicar_manual_control/: keyboard_controller.py
delicar_manual_control/launch/: joy_controller.launch.py
delicar_navigation/: CMakeLists.txt  package.xml
delicar_navigation/config/: navigation.yaml  navigation_sim.yaml  slam.yaml
delicar_navigation/launch/: navigation.launch.py  slam.launch.py
delicar_navigation/maps/: playground.pgm  playground.yaml  test.pgm  test.yaml
delicar_perception/msgs/people_msgs/: CMakeLists.txt  package.xml
delicar_perception/msgs/people_msgs/msg/: DetectedPerson.msg  DetectedPersonArray.msg  TrackPerson.msg  TrackPersonArray.msg
delicar_perception/msgs/yolo_msgs/: CMakeLists.txt  package.xml
delicar_perception/msgs/yolo_msgs/msg/: BoundingBox2D.msg  BoundingBox3D.msg  Detection.msg  DetectionArray.msg  KeyPoint2D.msg  KeyPoint2DArray.msg  KeyPoint3D.msg  KeyPoint3DArray.msg  Point2DArray.msg  Pose2DArray.msg  Track.msg  TrackArray.msg
delicar_perception/people_perception/camera_detector/: CMakeLists.txt  package.xml
delicar_perception/people_perception/camera_detector/launch/: camera_detector.launch.py
delicar_perception/people_perception/camera_detector/scripts/: track_2D_node.py
delicar_perception/people_perception/camera_detector/src/: compute_human_pos_node.cpp  projection_3D_node.cpp  visualize_human.cpp
delicar_sensors/bno055/: setup.py
delicar_sensors/bno055/bno055/: bno055_fuse_grav.py
delicar_sensors/bno055/launch/: bno055.launch.py
delicar_sensors/rs_to_velodyne/: CMakeLists.txt  package.xml
delicar_sensors/rs_to_velodyne/launch/: rs_to_velodyne.launch.py
delicar_sensors/rslidar_sdk/: CMakeLists.txt
delicar_slam/lidarslam/: README.md
delicar_slam/map_saver_node/: CMakeLists.txt  package.xml
delicar_slam/map_saver_node/src/: map_saver_node.cpp
delicar_slam/pointcloud_to_2dmap/: CMakeLists.txt  package.xml
delicar_slam/pointcloud_to_2dmap/launch/: pointcloud_to_2dmap.launch.py
delicar_slam/pointcloud_to_2dmap/src/: pointcloud_to_2dmap_node.cpp
lidar_localization/: CMakeLists.txt  package.xml
lidar_localization/launch/: lidar_localization.launch.py
lidar_localization/param/: localization.yaml  nav2_params.yaml
lidar_localization/src/: pcl_localization_component.cpp
pointcloud_to_laserscan/launch/: pointcloud_to_laserscan_launch.py
twist_converter/: CMakeLists.txt  package.xml
twist_converter/src/: twist_converter.cpp
twist_mux/launch/: twist_mux.launch.py
twist_mux/src/: twist_mux.cpp  twist_mux_diagnostics.cpp
(+28 files in other folders)
